--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
 	<body>
 		<div id="root"></div>
+		<div id="portal"></div>
+
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
