feature: added change the theme

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		/>
 
 		<meta name="msapplication-TileColor" content="#3d3bff" />
-		<meta name="theme-color" content="#ffffff" />
+		<meta name="theme-color" content="#F4F4F6" />
 
 		<meta property="og:locale" content="ru-Ru" />
 		<meta property="og:type" content="website" />
