feature: add useDocumentTitle hook

--- a/index.html
+++ b/index.html
@@ -37,25 +37,28 @@
 		<meta property="og:locale" content="ru-Ru" />
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="/src/assets/images/sharing.png" />
-		<meta property="og:title" content="Андрей Сухушин — Curriculum Vitae" />
+		<meta property="og:title" content="Андрей Сухушин // Curriculum Vitae" />
 		<meta property="og:description" content="description" />
 
 		<meta name="robots" content="index,follow" />
 		<meta name="description" content="description" />
 		<meta
 			name="keywords"
-			content="Андрей Сухушин, Фронтенд-разработчик, Frontend-разработчик, Графический дизайнер, UI/UX, Резюме, Curriculum Vitae, As Design"
+			content="Андрей Сухушин, Andrew Sukhushin, Фронтенд-разработчик, Frontend-разработчик, Графический дизайнер, UI/UX, Резюме, Curriculum Vitae, As Design, No Sleep Agency, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех"
 		/>
 		<meta name="author" content="Андрей Сухушин | As Design" />
 		<meta name="copyright" content="© Андрей Сухушин, 2023" />
 
 		<meta
 			name="apple-mobile-web-app-title"
-			content="Андрей Сухушин — Curriculum Vitae"
+			content="Андрей Сухушин // Curriculum Vitae"
 		/>
-		<meta name="application-name" content="Андрей Сухушин — Curriculum Vitae" />
+		<meta
+			name="application-name"
+			content="Андрей Сухушин // Curriculum Vitae"
+		/>
 
-		<title>Андрей Сухушин — Curriculum Vitae</title>
+		<title>Андрей Сухушин // Curriculum Vitae</title>
 	</head>
 
 	<body>
