feature: add Breadcrumbs component

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<meta name="description" content="description" />
 		<meta
 			name="keywords"
-			content="Андрей Сухушин, Andrew Sukhushin, Фронтенд-разработчик, Frontend-разработчик, Графический дизайнер, UI/UX, Резюме, Curriculum Vitae, As Design, No Sleep Agency, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех"
+			content="Андрей Сухушин, Andrew Sukhushin, Фронтенд-разработчик, Frontend-разработчик, Графический дизайнер, UI/UX, Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех"
 		/>
 		<meta name="author" content="Андрей Сухушин | As Design" />
 		<meta name="copyright" content="© Андрей Сухушин, 2023" />
