refactor: update all

--- a/index.html
+++ b/index.html
@@ -34,17 +34,34 @@
 		<meta name="msapplication-TileColor" content="#3d3bff" />
 		<meta name="theme-color" content="#F4F4F6" />
 
-		<meta property="og:locale" content="ru-Ru" />
+		<meta property="og:locale" content="ru_RU" />
+		<meta property="og:locale:alternate" content="en_GB" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="/src/assets/images/sharing.png" />
 		<meta property="og:title" content="Андрей Сухушин // Curriculum Vitae" />
-		<meta property="og:description" content="description" />
+		<meta
+			property="og:description"
+			content="Фронтенд-разработчик, Графический дизайнер, UI/UX, As Design"
+		/>
+		<meta
+			property="og:image"
+			content="https://asdznpro-cv.hb.ru-msk.vkcs.cloud/assets/common/sharing.png"
+		/>
+		<meta
+			property="og:image:alt"
+			content="Андрей Сухушин // Curriculum Vitae"
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="cv.asdzn.pro" />
+		<meta property="og:site_name" content="Curriculum Vitae" />
 
 		<meta name="robots" content="index,follow" />
-		<meta name="description" content="description" />
+		<meta
+			name="description"
+			content="Фронтенд-разработчик, Графический дизайнер, UI/UX, As Design"
+		/>
 		<meta
 			name="keywords"
-			content="Андрей Сухушин, Andrew Sukhushin, Фронтенд-разработчик, Frontend-разработчик, Графический дизайнер, UI/UX, Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех"
+			content="Андрей Сухушин, Andrew Sukhushin, Фронтенд-разработчик, Frontend-разработчик, Графический дизайнер, UI/UX, Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, VK, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех"
 		/>
 		<meta name="author" content="Андрей Сухушин | As Design" />
 		<meta name="copyright" content="© Андрей Сухушин, 2023" />
