--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 			content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no, viewport-fit=cover"
 		/>
 
+		<meta name="yandex-verification" content="260b82599971325b" />
+
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
