refactor: update favicon & meta tags

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 		<meta name="msapplication-TileColor" content="#3d3bff" />
 		<meta name="theme-color" content="#F4F4F6" />
 
+		<meta name="apple-mobile-web-app-title" content="Andrew Sukhushin's CV" />
+		<meta
+			name="application-name"
+			content="Andrew Sukhushin's Curriculum Vitae"
+		/>
+
 		<meta property="og:locale" content="ru_RU" />
 		<meta property="og:locale:alternate" content="en_GB" />
 		<meta property="og:type" content="website" />
@@ -44,6 +50,9 @@
 			property="og:description"
 			content="Фронтенд-разработчик, Графический дизайнер, UI/UX, As Design"
 		/>
+
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="628" />
 		<meta
 			property="og:image"
 			content="https://asdznpro-cv.hb.ru-msk.vkcs.cloud/assets/common/sharing.png"
@@ -52,11 +61,11 @@
 			property="og:image:alt"
 			content="Андрей Сухушин // Curriculum Vitae"
 		/>
+
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="cv.asdzn.pro" />
 		<meta property="og:site_name" content="Curriculum Vitae" />
 
-		<meta name="robots" content="index,follow" />
 		<meta
 			name="description"
 			content="Фронтенд-разработчик, Графический дизайнер, UI/UX, As Design"
@@ -66,16 +75,8 @@
 			content="Андрей Сухушин, Andrew Sukhushin, Фронтенд-разработчик, Frontend-разработчик, Графический дизайнер, UI/UX, Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, VK, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех"
 		/>
 		<meta name="author" content="Андрей Сухушин | As Design" />
-		<meta name="copyright" content="© Андрей Сухушин, 2023" />
-
-		<meta
-			name="apple-mobile-web-app-title"
-			content="Андрей Сухушин // Curriculum Vitae"
-		/>
-		<meta
-			name="application-name"
-			content="Андрей Сухушин // Curriculum Vitae"
-		/>
+		<meta name="copyright" content="© Андрей Сухушин, 2024" />
+		<meta name="robots" content="index,follow" />
 
 		<title>Андрей Сухушин // Curriculum Vitae</title>
 
