--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<meta name="yandex-verification" content="260b82599971325b" />
 
 		<link
+			rel="icon"
+			type="image/x-icon"
+			sizes="48x48"
+			href="/src/assets/images/favicon/favicon.ico"
+		/>
+		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
 			href="/src/assets/images/favicon/apple-touch-icon.png"
