refactor: update meta tags

--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
 			rel="icon"
 			type="image/x-icon"
 			sizes="48x48"
-			href="/src/assets/images/favicon/favicon.ico"
+			href="/favicon/favicon.ico"
 		/>
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="/src/assets/images/favicon/apple-touch-icon.png"
+			href="/favicon/apple-touch-icon.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="/src/assets/images/favicon/favicon-32x32.png"
+			href="/favicon/favicon-32x32.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="/src/assets/images/favicon/favicon-16x16.png"
+			href="/favicon/favicon-16x16.png"
 		/>
-		<link rel="manifest" href="/src/assets/images/favicon/site.webmanifest" />
+		<link rel="manifest" href="/favicon/site.webmanifest" />
 		<link
 			rel="mask-icon"
-			href="/src/assets/images/favicon/safari-pinned-tab.svg"
+			href="/favicon/safari-pinned-tab.svg"
 			color="#3d3bff"
 		/>
+
+		<link rel="canonical" href="https://cv.asdzn.pro" />
 
 		<meta name="msapplication-TileColor" content="#3d3bff" />
 		<meta name="theme-color" content="#F4F4F6" />
@@ -50,15 +52,22 @@
 
 		<meta property="og:locale" content="ru_RU" />
 		<meta property="og:locale:alternate" content="en_GB" />
+		<meta name="og:region" content="RU" />
+		<meta name="og:country-name" content="Russia" />
+
 		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Curriculum Vitae" />
+		<meta property="og:url" content="cv.asdzn.pro" />
+		<meta name="og:email" content="hi@asdzn.pro" />
+
 		<meta property="og:title" content="Андрей Сухушин // Curriculum Vitae" />
 		<meta
 			property="og:description"
-			content="Фронтенд-разработчик, Графический дизайнер, UI/UX, As Design"
+			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Frontend-разработчик, UI/UX, Графический дизайнер"
 		/>
 
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="628" />
+		<meta property="og:image:width" content="820" />
+		<meta property="og:image:height" content="312" />
 		<meta
 			property="og:image"
 			content="https://asdznpro-cv.hb.ru-msk.vkcs.cloud/assets/common/sharing.png"
@@ -68,20 +77,18 @@
 			content="Андрей Сухушин // Curriculum Vitae"
 		/>
 
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="cv.asdzn.pro" />
-		<meta property="og:site_name" content="Curriculum Vitae" />
-
 		<meta
 			name="description"
-			content="Фронтенд-разработчик, Графический дизайнер, UI/UX, As Design"
+			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Frontend-разработчик, UI/UX, Графический дизайнер"
 		/>
 		<meta
 			name="keywords"
-			content="Андрей Сухушин, Andrew Sukhushin, Фронтенд-разработчик, Frontend-разработчик, Графический дизайнер, UI/UX, Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, VK, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех"
+			content="Андрей Сухушин, Andrew Sukhushin, Фронтенд-разработчик, Frontend-разработчик, UI/UX, Графический дизайнер, Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, VK, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех, НИ ТПУ ИШЭ ОЭЭ"
 		/>
+
 		<meta name="author" content="Андрей Сухушин | As Design" />
 		<meta name="copyright" content="© Андрей Сухушин, 2024" />
+		<meta name="reply-to" content="hi@asdzn.pro" />
 		<meta name="robots" content="index,follow" />
 
 		<title>Андрей Сухушин // Curriculum Vitae</title>
