feature: add English localization

--- a/index.html
+++ b/index.html
@@ -83,11 +83,17 @@
 		/>
 		<meta
 			name="keywords"
-			content="Андрей Сухушин, Andrew Sukhushin, Фронтенд-разработчик, Frontend-разработчик, UI/UX, Графический дизайнер, Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, VK, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех, НИ ТПУ ИШЭ ОЭЭ"
+			content="Андрей Сухушин (Andrew Sukhushin), Фронтенд-разработчик, Frontend-разработчик, UI/UX, Графический дизайнер, Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, VK, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех, НИ ТПУ ИШЭ ОЭЭ"
 		/>
 
-		<meta name="author" content="Андрей Сухушин | As Design" />
-		<meta name="copyright" content="© Андрей Сухушин, 2024" />
+		<meta
+			name="author"
+			content="Андрей Сухушин (Andrew Sukhushin) | As Design"
+		/>
+		<meta
+			name="copyright"
+			content="© Андрей Сухушин (Andrew Sukhushin), 2024"
+		/>
 		<meta name="reply-to" content="hi@asdzn.pro" />
 		<meta name="robots" content="index,follow" />
 
