refactor: update all

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<meta property="og:title" content="Андрей Сухушин // Curriculum Vitae" />
 		<meta
 			property="og:description"
-			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Frontend-разработчик, UI/UX, Графический дизайнер"
+			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Графический & UI/UX дизайнер, Фронтенд-разработчик"
 		/>
 
 		<meta property="og:image:width" content="820" />
@@ -79,11 +79,11 @@
 
 		<meta
 			name="description"
-			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Frontend-разработчик, UI/UX, Графический дизайнер"
+			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Графический & UI/UX дизайнер, Фронтенд-разработчик"
 		/>
 		<meta
 			name="keywords"
-			content="Андрей Сухушин (Andrew Sukhushin), Фронтенд-разработчик, Frontend-разработчик, UI/UX, Графический дизайнер, Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, VK, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех, НИ ТПУ ИШЭ ОЭЭ"
+			content="Андрей Сухушин (Andrew Sukhushin), Графический дизайнер, UI/UX, Frontend-разработчик (Фронтенд-разработчик), Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, VK, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех, НИ ТПУ ИШЭ ОЭЭ"
 		/>
 
 		<meta
