refactor: update all

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<meta property="og:title" content="Андрей Сухушин // Curriculum Vitae" />
 		<meta
 			property="og:description"
-			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Графический & UI/UX дизайнер, Фронтенд-разработчик"
+			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Графический & UI/UX дизайнер, Frontend-разработчик"
 		/>
 
 		<meta property="og:image:width" content="820" />
@@ -79,7 +79,7 @@
 
 		<meta
 			name="description"
-			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Графический & UI/UX дизайнер, Фронтенд-разработчик"
+			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Графический & UI/UX дизайнер, Frontend-разработчик"
 		/>
 		<meta
 			name="keywords"
