refactor: update all

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
@@ -72,18 +72,11 @@
 			property="og:image"
 			content="https://asdznpro-cv.hb.ru-msk.vkcs.cloud/assets/common/sharing.png"
 		/>
-		<meta
-			property="og:image:alt"
-			content="Андрей Сухушин // Curriculum Vitae"
-		/>
+		<meta property="og:image:alt" content="Curriculum Vitae" />
 
 		<meta
 			name="description"
 			content="Графический дизайнер с более чем 5-летним стажем работы в создании уникальных и креативных дизайн-решений. В последний год также активно развиваюсь в области UI/UX дизайна и Frontend-разработки, стремясь применять свой творческий подход к созданию функциональных и привлекательных веб-интерфейсов // Графический & UI/UX дизайнер, Frontend-разработчик"
-		/>
-		<meta
-			name="keywords"
-			content="Андрей Сухушин (Andrew Sukhushin), Графический дизайнер, UI/UX, Frontend-разработчик (Фронтенд-разработчик), Резюме, Curriculum Vitae, As Design, asdzn, asdznpro, No Sleep Agency, VK, Warface, Winline Esports Media League, МГТВ, MYBONUS, Томский политех, НИ ТПУ ИШЭ ОЭЭ"
 		/>
 
 		<meta
@@ -122,7 +115,7 @@
 				document,
 				'script',
 				'https://mc.yandex.ru/metrika/tag.js',
-				'ym'
+				'ym',
 			)
 
 			ym(96347326, 'init', {
